# adapter-training

./: .gitignore  README.md  pyproject.toml
notebooks/: adapter-api.ipynb  data-validation.ipynb  training-data-builder.ipynb
scripts/: build_training_data.py  download_hermes.py  start_training_tmux.sh  train_lora.py
src/adapter_training/: __init__.py  adapter_format.py  adapter_prompt.py
src/hermes_adapter_training_plan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
