[project]
name = "hermes-adapter-training-plan"
version = "0.1.0"
description = "Hermes-to-adapter training data and LoRA training pipeline"
requires-python = ">=3.11"
dependencies = [
  "datasets>=4.0.0",
  "pydantic>=2.7.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
